# wordle-solutions-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: wordle.yml
solutions/: Wordle_Solution_2024-06-25.txt  Wordle_Solution_2024-06-26.txt  Wordle_Solution_2024-06-27.txt  Wordle_Solution_2024-06-28.txt  Wordle_Solution_2024-06-29.txt  Wordle_Solution_2024-06-30.txt  Wordle_Solution_2024-07-01.txt  Wordle_Solution_2024-07-02.txt  Wordle_Solution_2024-07-03.txt  Wordle_Solution_2024-07-04.txt  Wordle_Solution_2024-07-05.txt  Wordle_Solution_2024-07-06.txt  Wordle_Solution_2024-07-07.txt  Wordle_Solution_2024-07-08.txt  Wordle_Solution_2024-07-09.txt  Wordle_Solution_2024-07-10.txt  Wordle_Solution_2024-07-11.txt  Wordle_Solution_2024-07-12.txt  Wordle_Solution_2024-07-13.txt  Wordle_Solution_2024-07-14.txt  Wordle_Solution_2024-07-15.txt  Wordle_Solution_2024-07-16.txt  Wordle_Solution_2024-07-17.txt  Wordle_Solution_2024-07-18.txt  Wordle_Solution_2024-07-19.txt  Wordle_Solution_2024-07-20.txt  Wordle_Solution_2024-07-21.txt  Wordle_Solution_2024-07-22.txt  Wordle_Solution_2024-07-23.txt  Wordle_Solution_2024-07-24.txt  Wordle_Solution_2024-07-25.txt  Wordle_Solution_2024-07-26.txt  Wordle_Solution_2024-07-27.txt  Wordle_Solution_2024-07-28.txt  Wordle_Solution_2024-07-29.txt  Wordle_Solution_2024-07-30.txt  Wordle_Solution_2024-07-31.txt  Wordle_Solution_2024-08-01.txt  Wordle_Solution_2024-08-02.txt  Wordle_Solution_2024-08-03.txt  (+155 more)
